crates/burn-cube/tests/error/return_value.stderr
error: Only void return is supported.
 --> tests/error/return_value.rs:6:9
  |
6 |         return x;
  |         ^^^^^^^^
